"Working on email template"

--- a/email_template.html
+++ b/email_template.html
@@ -313,7 +313,7 @@
                                 align="left">
 
                                 <div align="left">
-                                  <a href="" target="_blank" class="v-button"
+                                  <a href="http://localhost:3000/ForgetPassword/"  class="v-button"
                                     style="box-sizing: border-box;display: inline-block;text-decoration: none;-webkit-text-size-adjust: none;text-align: center;color: #FFFFFF; background-color: #040c4d; border-radius: 1px;-webkit-border-radius: 1px; -moz-border-radius: 1px; width:auto; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word; mso-border-alt: none;font-size: 14px;">
                                     <span style="display:block;padding:15px 40px;line-height:120%;"><span
                                         style="font-size: 18px; line-height: 21.6px;">Reset Password</span></span>
